Set base path for Sanity

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "dev": "next dev",
+  "prebuild": "echo 'Building Sanity to public/studio' && cd studio && npm && npx @sanity/cli build ../public/studio -y && echo 'Done'",
+  "build": "next build",
+  "start": "next start",
+  "sanity": "cd studio && sanity start",
+  "lint": "next lint"
   },
   "dependencies": {
     "@sanity/client": "^3.4.1",
