--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "sanity-next-ecommerce",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-  "dev": "next dev",
-  "prebuild": "echo 'Building Sanity to public/studio' && cd studio && npm && npx @sanity/cli build ../public/studio -y && echo 'Done'",
-  "build": "next build",
-  "start": "next start",
-  "sanity": "cd studio && sanity start",
-  "lint": "next lint"
-  },
-  "dependencies": {
-    "@sanity/client": "^3.4.1",
-    "@sanity/image-url": "^1.0.1",
-    "axios": "^1.2.1",
-    "next": "13.0.5",
-    "next-seo": "^5.15.0",
-    "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@sanity/cli": "^3.0.6",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
-  }
+	"name": "sanity-next-ecommerce",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"prebuild": "echo 'Building Sanity to public/studio' && cd studio && npx @sanity/cli build ../public/studio -y && echo 'Done'",
+		"build": "next build",
+		"start": "next start",
+		"sanity": "cd studio && sanity start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@sanity/client": "^3.4.1",
+		"@sanity/image-url": "^1.0.1",
+		"axios": "^1.2.1",
+		"next": "13.0.5",
+		"next-seo": "^5.15.0",
+		"nodemailer": "^6.8.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@sanity/cli": "^3.0.6",
+		"autoprefixer": "^10.4.13",
+		"eslint": "8.28.0",
+		"eslint-config-next": "13.0.5",
+		"postcss": "^8.4.19",
+		"tailwindcss": "^3.2.4"
+	}
 }
